--- a/pug/footer.pug
+++ b/pug/footer.pug
@@ -1,4 +1,4 @@
-.footer-copyright.text-center.py-e 
+.footer-copyright.text-center.text-light.py-e.footer-dark.bg-dark
     p I don't own anything. 
       | All rights about SpaceX information goes to Ellon Mask and SpaceX. 
       | I just have fun with API :) 
