--- a/pug/header.pug
+++ b/pug/header.pug
@@ -1,39 +1,8 @@
-nav.navbar.navbar-expend-lg.navbar-dark.bg-dark
-    a.navbar-brand(href='') SpaceX | FAN SITE
-    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
-        span.navbar-toggler-icon
-    .collape.navbar-collapse(id='navbarNav')
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='html/capsules_page.html') Capsules
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') Cores
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') Dragons
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') History
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') Info
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') Landing pads
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='html/missions_page.html') Missions
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') Payloads
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') Rockets
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') Roadster
-        ul.navbar-nav
-            li.nav-item
-                a.nav-link(href='#') Ships      
-                
+header.masthead(style='background-image:url("../img/main-bg-3.webp");')
+    .container
+        .intro-text
+            .intro-lead-in
+                span SpaceX Fan Site
+            .intro-heading.text-uppercase
+                span Explore all about spaceadventures
+            a.btn.btn-primary.btn-xl.text-uppercase.js-scroll-trigger(role='button', href='#') Let's go
