--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,12 +4,26 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css' integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous")
+        link(rel="stylesheet", href="../css/main.css")
+
+        link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Montserrat:400,700")
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script")
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic")
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700")
 
         title SpaceX | FAN SITE
-    body 
+    body
+        include navbar.pug
         include header.pug
-            
-        include footer.pug
+        
+        section(id='crew')
+            include crew-cards.pug
+        section(id='missions')
+            include mission-cards.pug
+        
+        script(src="../js/info.js")
+        script(src="../js/crew.js")
+        script(src="../js/mission.js")
         script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous")
         script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous")
